clusters/infrastructure/cloudflare-tunnel/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: cloudflare-tunnel
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
